Updated scasm.cfg to allow for assembly of new arithmatic

--- a/scasm.cfg
+++ b/scasm.cfg
@@ -75,4 +75,5 @@ CALL   &H10%6, %10
 RETURN &H11%6, 0%10
 IN     &H12%6, %10
 OUT    &H13%6, %10
-SQRT   &H14%6
+SQRT   &H14%6, %10
+MULT   &H15%6, %10
